// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderNav /> snapshots should match snapshot 1`] = `
<nav
  class="styles__Container-sc-ljilrx-0 bkkmpr"
>
  <ul
    class="styles__NavLinks-sc-ljilrx-1 ehtfwm false false"
    data-testid="nav-list"
  >
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Collections
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Men
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Women
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        About
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderNav /> snapshots should match snapshot small screen 1`] = `
<nav
  class="styles__Container-sc-ljilrx-0 bkkmpr"
>
  <button
    aria-expanded="false"
    aria-label="menu"
    class="styles__MenuButton-sc-ljilrx-3 cPTOAB"
  >
    <icon-mock
      data-testid="menu-svg"
    />
  </button>
  <ul
    class="styles__NavLinks-sc-ljilrx-1 ehtfwm smallScreen false"
    data-testid="nav-list"
  >
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Collections
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Men
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Women
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        About
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderNav /> snapshots should match snapshot small screen and menu active 1`] = `
<nav
  class="styles__Container-sc-ljilrx-0 bkkmpr"
>
  <button
    aria-expanded="true"
    aria-label="menu"
    class="styles__MenuButton-sc-ljilrx-3 cPTOAB"
  >
    <icon-mock
      data-testid="close-svg"
    />
  </button>
  <ul
    class="styles__NavLinks-sc-ljilrx-1 ehtfwm smallScreen menuActive"
    data-testid="nav-list"
  >
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Collections
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Men
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Women
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        About
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderNav /> snapshots should match snapshot when not small screen 1`] = `
<nav
  class="styles__Container-sc-ljilrx-0 bkkmpr"
>
  <ul
    class="styles__NavLinks-sc-ljilrx-1 ehtfwm false false"
    data-testid="nav-list"
  >
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Collections
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Men
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Women
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        About
      </a>
    </li>
    <li
      class="styles__StyledItem-sc-ljilrx-2 gRnFfe"
    >
      <a
        href="#"
      >
        Contact
      </a>
    </li>
  </ul>
</nav>
`;
